# tb8-rs

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  fly.toml  nixpacks.toml  railway.toml
src/: error.rs  main.rs  mod.rs  models.rs  tfl.rs
src/routes/: arrivals.rs  disruption.rs  lines.rs  mod.rs  stations.rs
