[package]
name = "tb8-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"] }
chrono = { version = "0.4.31", features = ["serde"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
thiserror = "1.0.56"
serde_path_to_error = "0.1.17"
# polars = { version = "0.35.0", features = ["lazy", "sql"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
  "user-hooks",
] }
